devel/libdc1394 fixed broken livecheck by adding livecheck.distname
git-svn-id: https://svn.macports.org/repository/macports/trunk@73648 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/libdc1394/Portfile
+++ b/dports/devel/libdc1394/Portfile
@@ -26,3 +26,4 @@ checksums           md5 b85f1ade88d8d96688d5965ed8603d53 \
 
 depends_build       port:pkgconfig
 
+livecheck.distname      libdc1394-2
