libical: fix livecheck.
git-svn-id: https://svn.macports.org/repository/macports/trunk@73651 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/libical/Portfile
+++ b/dports/devel/libical/Portfile
@@ -27,4 +27,5 @@ post-configure {
     }
 }
 
-livecheck.regex     "${name}-(\\d+(?:\\.\\d+)*) released"
+livecheck.url       http://sourceforge.net/projects/freeassociation/files/
+livecheck.regex     "${name}-(\\d+(?:\\.\\d+)*)${extract.suffix}"
