python/py25-tz: take maintainership, with openmaintainer
git-svn-id: https://svn.macports.org/repository/macports/trunk@73655 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/python/py25-tz/Portfile
+++ b/dports/python/py25-tz/Portfile
@@ -10,7 +10,7 @@ version         2010l
 categories      python devel
 platforms       darwin
 supported_archs noarch
-maintainers     nomaintainer
+maintainers     ram openmaintainer
 description     World Timezone Definitions for Python
 
 long_description \
