python/py2{5,6,7}-tz: update to 2010o
git-svn-id: https://svn.macports.org/repository/macports/trunk@73656 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/python/py27-tz/Portfile
+++ b/dports/python/py27-tz/Portfile
@@ -6,7 +6,7 @@ PortGroup       python27 1.0
 
 name            py27-tz
 set my_name     pytz
-version         2010l
+version         2010o
 categories      python devel
 platforms       darwin
 supported_archs noarch
@@ -23,9 +23,9 @@ master_sites    http://cheeseshop.python.org/packages/source/p/pytz/
 distname        ${my_name}-${version}
 use_bzip2       yes
 
-checksums       md5     8ea38ffd627f2169b597442928ea5967 \
-                sha1    5303ed823d3a05315bb2e6120211b46364cc539e \
-                rmd160  b1bf03cfa5b4bdfdeed42136e09edf705f2c9b0d
+checksums       md5 88b641aafc6025acf5368766b51b00d3 \
+                sha1 06a647748d7d77323d7b3ac2f415c5d52e66e1b4 \
+                rmd160 e1a22f7b1e34b549388a6b9d2f78e2fb581a0204
 
 post-destroot {
     set docdir ${prefix}/share/doc/${name}-${version}
