faac: fix livecheck.
git-svn-id: https://svn.macports.org/repository/macports/trunk@73659 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/audio/faac/Portfile
+++ b/dports/audio/faac/Portfile
@@ -24,5 +24,5 @@ configure.cflags-append	"-D__unix__"
 use_autoreconf yes
 autoreconf.args -fvi
 
-livecheck.version	${name}-${version}
-livecheck.distname	faac-src
+livecheck.url   http://sourceforge.net/projects/${name}/files/
+livecheck.regex "${name}-(\\d+(?:\\.\\d+)*)${extract.suffix}"
