--- a/dports/audio/flac/Portfile
+++ b/dports/audio/flac/Portfile
@@ -1,3 +1,4 @@
+# -*- coding: utf-8; mode: tcl; tab-width: 4; indent-tabs-mode: nil; c-basic-offset: 4 -*- vim:fenc=utf-8:ft=tcl:et:sw=4:ts=4:sts=4
 # $Id$
 
 PortSystem      1.0
@@ -54,4 +55,5 @@ platform darwin i386 {
     configure.args-append   --disable-asm-optimizations
 }
 
-livecheck.regex "<title>flac-src flac-(.*)-src released.*</title>"
+livecheck.url   http://sourceforge.net/projects/${name}/files/
+livecheck.regex "${name}-(\\d+(?:\\.\\d+)*)${extract.suffix}"
