--- a/dports/audio/faust/Portfile
+++ b/dports/audio/faust/Portfile
@@ -4,7 +4,7 @@
 PortSystem              1.0
 
 name                    faust
-version                 0.9.24
+version                 0.9.30
 categories              audio lang
 platforms               darwin
 maintainers             ryandesign
@@ -18,9 +18,8 @@ long_description        Faust is a functional programming language \
                         specifically designed for realtime audio applications \
                         and plugins.
 
-checksums               md5     0a5c2b04be44870da281bb422e8c7dfb \
-                        sha1    d96b4c1e20cda92bafef9a4f791828285a06509b \
-                        rmd160  1de44132669056394028e5bc2e374a63256f8852
+checksums               sha1    b8c96e65d081b4ea94fadc1a71b3db2262ee3a9c \
+                        rmd160  3ca726396d16c1e17be87c82f42915db0d85e59f
 
 patchfiles-append       patch-prefix.diff
 
