--- a/dports/php/php5-imagick/Portfile
+++ b/dports/php/php5-imagick/Portfile
@@ -4,7 +4,7 @@
 PortSystem              1.0
 PortGroup               php5extension 1.0
 
-php5extension.setup     imagick 3.0.0 pecl
+php5extension.setup     imagick 3.0.1 pecl
 categories-append       graphics
 platforms               darwin
 maintainers             ryandesign
@@ -15,9 +15,8 @@ description             PHP extension to create and modify images with \
 long_description        Imagick is a native PHP extension for creating and \
                         modifying images using the ImageMagick API
 
-checksums               md5     44d188f3a99ecc3892f3a1c2f1ae247a \
-                        sha1    b8610265fdd9441b3787206d44e4d638925e0e4b \
-                        rmd160  653cf8dcd0342024dc50b46ef8909e92950d07d0
+checksums               sha1    64dd5c8ff4d43d94e65c3b35ac0b439676ecc746 \
+                        rmd160  854fafe039e85a43bc1e53c00147099620a0034a
 
 depends_lib-append      path:bin/MagickWand-config:ImageMagick
 
