kmymoney4-devel: fix for crash after transaction download via HBCI
git-svn-id: https://svn.macports.org/repository/macports/trunk@73664 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/kde/kmymoney4-devel/Portfile
+++ b/dports/kde/kmymoney4-devel/Portfile
@@ -12,6 +12,7 @@ svn.revision        1199066
 
 name                kmymoney4-devel
 version             4.5-${svn.revision}
+revision            1
 
 categories          kde finance
 maintainers         mk pixilla.com:brad openmaintainer
@@ -42,14 +43,14 @@ This port is still EXPERIMENTAL.               \n \
                                                \n \
 So far known problems are:                     \n \
  - chart reports let the app hang              \n \
- - app crashes after HBCI transaction download \n \
  - balance and net worth charts w/o axis lines \n \
                                                \n \
 ============================================== \n \
 "
 }
 
-patchfiles        patch-kMyMoneyDateInput_eventFilter.diff 
+patchfiles        patch-kMyMoneyDateInput_eventFilter.diff \
+                  patch_for_crash_due_to_GWEN_StringListEntry_Next.diff
 
 patch.dir         ${workpath}/${distname}
 patch.pre_args    -p1
