kmymoney(4(-devel)): add license
git-svn-id: https://svn.macports.org/repository/macports/trunk@73665 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/kde/kmymoney/Portfile
+++ b/dports/kde/kmymoney/Portfile
@@ -9,6 +9,7 @@ version           1.0.5
 categories        kde finance
 maintainers       techno.ms:mk-macports pixilla.com:brad
 platforms         darwin
+license           GPL2
 
 description       a personal finance manager
 long_description  KMyMoney is the personal finance manager for KDE. \
