--- a/dports/kde/kmymoney4/Portfile
+++ b/dports/kde/kmymoney4/Portfile
@@ -16,6 +16,7 @@ maintainers         mk pixilla.com:brad openmaintainer
 description         kmymoney version 4 (THIS IS STILL AN EXPERIMENTAL PORT.)
 long_description    KMyMoney is the personal finance manager for KDE. (THIS IS STILL AN EXPERIMENTAL PORT.)
 platforms           darwin
+license             GPL2
 
 homepage            http://kmymoney2.sourceforge.net/index-home.html
 master_sites        sourceforge:kmymoney2
