imap-uw:  * fix license  * drop maintainer  * drop md5 checksum  * add missing dependencies  * patch Makefile to use MacPorts SSL/GSS  * properly set IP6  * default non-PAM, force encryption  * drop 10.3 messages  * drop +nopwd (is part of the default) #23423
git-svn-id: https://svn.macports.org/repository/macports/trunk@73666 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/mail/imap-uw/Portfile
+++ b/dports/mail/imap-uw/Portfile
@@ -6,8 +6,8 @@ PortSystem          1.0
 name                imap-uw
 version             2007e
 categories          mail
-license             Apache v2
-maintainers         snc openmaintainer
+license             Apachev2
+maintainers         nomaintainer
 description         University of Washington IMAP daemon
 long_description    IMAP (Internet Message Access Protocol) is a method \
                     of accessing electronic messages kept on a (possibly \
@@ -21,40 +21,41 @@ platforms           darwin
 
 distname            imap-${version}
 extract.suffix      .tar.Z
-checksums           md5     519d68a8650420ae33eb7085dd6a8150 \
-                    sha1    24c63cad8d0e74aa76e4341fcfa54d24f23a8c70 \
+checksums           sha1    24c63cad8d0e74aa76e4341fcfa54d24f23a8c70 \
                     rmd160  7d6af203419975f763d7ec17b6a4544c94490b50
+
+depends_lib         port:openssl port:gss
 
 use_configure       no
 use_parallel_build  no
 
-build.target        oxp
-# Enable IPv6 support
-build.args-append   IP=6
-# Ensure we're UsingTheRightCompiler
-build.args-append   CC=${configure.cc}
-
+patchfiles          patch-Makefile.diff
 if {"darwin" == ${os.platform} && ${os.major} >= 10} {
     patchfiles-append   patch-snowleopard.diff
 }
+post-patch {
+    reinplace s|SSLINCLUDE=\/usr|SSLINCLUDE=${prefix}|g ${worksrcpath}/Makefile
+    reinplace s|SSLLIB=\/usr|SSLLIB=${prefix}|g ${worksrcpath}/Makefile
+    reinplace s|GSSINCLUDE=\/usr|GSSINCLUDE=${prefix}|g ${worksrcpath}/Makefile
+    reinplace s|GSSLIB=\/usr|GSSLIB=${prefix}|g ${worksrcpath}/Makefile
+}
 
-# Default is to enable SSL support and plaintext authentication
-# permitted only in SSL/TLS sessions.
+build.target        osx
+# Enable IPv6 support
+build.args-append   IP6=6
+# Ensure we're UsingTheRightCompiler
+build.args-append   CC=${configure.cc}
+# Force SSL connections: no unecrypted plaintext authenication
+build.args          SSLTYPE=nopwd
 
-# Variant to enable SSL support and plaintext authentication
-variant ssl_plain description { enable SSL support and plaintext authentication } {
-   patchfiles-append    patch-Makefile.diff
-   build.args-append    SSLTYPE=unix
+variant ssl_plain description {Allow unencrypted plaintext authentication} {
+    build.args-delete   SSLTYPE=nopwd
+    build.args-append   SSLTYPE=unix
 }
 
 # Variant to enable SSL with PAM support for Mac OS X
-variant ssl_pam description { enable SSL with PAM support } {
-   depends_lib      lib:libssl.0.9:openssl
-
-   patchfiles-append    patch-Makefile.diff
-
-   build.target     oxp
-   build.args-append    SSLTYPE=unix
+variant ssl_pam description { Enable PAM support } {
+    build.target    oxp
 
     post-destroot {
         xinstall -m 0644 ${filespath}/README-MACOSX \
@@ -66,21 +67,7 @@ variant ssl_pam description { enable SSL with PAM support } {
             ${filespath}/README-MACOSX \
             ${destroot}${prefix}/share/doc/${name}/etc-xinetd.d-imap \
             ${destroot}${prefix}/share/doc/${name}/etc-xinetd.d-imaps
-        
-        ui_msg "-----------------------------------------------------------"
-        ui_msg "For use of IMAP-UW using SSL and PAM on Mac OS X 10.3,"
-        ui_msg "please see the following:"
-        ui_msg "\t${prefix}/share/doc/${name}/README-MACOSX"
-        ui_msg "for further installation and setup details."
-        ui_msg "-----------------------------------------------------------"
     }
-}
-
-# Variant to disable plaintext authentication outside of SSL/TSL
-# i.e. prohibit unencrypted plaintext passwords
-variant nopwd description { prohibit unencrypted plaintext passwords } {
-    build.args-delete   SSLTYPE=unix
-    build.args-append   SSLTYPE=unix.nopwd
 }
 
 # Variant to set the default for creating new mailboxes to "mbx" format
