akonadi: be more explicit in mysql5-server dependency what is being depended upon; see #27404
git-svn-id: https://svn.macports.org/repository/macports/trunk@73667 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/akonadi/Portfile
+++ b/dports/devel/akonadi/Portfile
@@ -24,7 +24,8 @@ checksums           md5     ed19efb982f7debd7e109cf1397d0588 \
 depends_lib-append  port:soprano \
 					port:boost \
                     port:shared-mime-info
-depends_run-append  path:bin/mysql5:mysql5-server
+
+depends_run-append  path:libexec/mysqld:mysql5-server
 
 patchfiles          patch-akonadi-prefix.h.cmake.diff
 post-patch {
