PlasmaShop: add universal variant
git-svn-id: https://svn.macports.org/repository/macports/trunk@73669 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/PlasmaShop/Portfile
+++ b/dports/devel/PlasmaShop/Portfile
@@ -47,23 +47,30 @@ post-extract {
 
 patchfiles                  patch-prefix.diff patch-config.diff
 
+variant universal {}
+if {[variant_isset universal]} {
+    set archflags ${configure.universal_cflags}
+} else {
+    set archflags ${configure.cc_archflags}
+}
+
 post-patch {
     foreach file ${files_being_patched} {
         reinplace "s|@PREFIX@|${prefix}|g" ${worksrcpath}/${file}
         reinplace "s|@APPLICATIONS_DIR@|${applications_dir}|g" ${worksrcpath}/${file}
     }
-    reinplace "s|@CFLAGS@|${configure.cflags} ${configure.cc_archflags}|g" ${worksrcpath}/config
-    reinplace "s|@CXXFLAGS@|${configure.cxxflags} ${configure.cxx_archflags}|g" ${worksrcpath}/config
-    reinplace "s|@LDFLAGS@|${configure.ldflags} ${configure.ld_archflags}|g" ${worksrcpath}/config
+    reinplace "s|@CFLAGS@|${configure.cflags} ${archflags}|g" ${worksrcpath}/config
+    reinplace "s|@CXXFLAGS@|${configure.cxxflags} ${archflags}|g" ${worksrcpath}/config
+    reinplace "s|@LDFLAGS@|${configure.ldflags} ${archflags}|g" ${worksrcpath}/config
 }
 
 configure.cmd               ${qt_qmake_cmd}
 configure.pre_args
 
+configure.universal_args-delete --disable-dependency-tracking
+
 # http://forum.guildofwriters.com/viewtopic.php?f=86&t=4145#p40027
 use_parallel_build          no
-
-universal_variant           no
 
 platform darwin {
     if {${os.major} < 10} {
