gpsd: update to 2.95
git-svn-id: https://svn.macports.org/repository/macports/trunk@73672 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/net/gpsd/Portfile
+++ b/dports/net/gpsd/Portfile
@@ -3,7 +3,7 @@
 PortSystem              1.0
 
 name                    gpsd
-version                 2.94
+version                 2.95
 categories              net
 maintainers             nomaintainer
 platforms               darwin
@@ -16,14 +16,14 @@ long_description        gpsd is a small daemon multiplexes output or \
 homepage                http://gpsd.berlios.de/
 master_sites            http://download.berlios.de/gpsd/
 
-checksums               md5     ce70bcd707ac1df861d4c72f503c09d1 \
-                        sha1    d1c0661ebd6b41d019249b6588b7478927b7eba6 \
-                        rmd160  7c3a2d36eefb1ee533c138d6b77da8e1ece8fd2f
+checksums               sha1    af1f575c8ec3a2db7a71c35f2296fd339a4a1ff3 \
+                        rmd160  c9e8d3b7ff73c655d65f0f6e329ca7ff241b10f6
 
 depends_lib             port:xorg-libXaw \
                         port:Xft2 \
                         port:xorg-libXp \
                         port:libpng \
+                        port:qt4-mac \
                         lib:libXm:openmotif
 
 variant no_x11 {
