gpsd: disable universal variant; see #24355
git-svn-id: https://svn.macports.org/repository/macports/trunk@73673 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/net/gpsd/Portfile
+++ b/dports/net/gpsd/Portfile
@@ -26,6 +26,8 @@ depends_lib             port:xorg-libXaw \
                         port:qt4-mac \
                         lib:libXm:openmotif
 
+universal_variant       no
+
 variant no_x11 {
     depends_lib-delete  port:xorg-libXaw \
                         port:Xft2 \
