bluefish: don't call pkg-config until we can be sure pkgconfig and the package we're checking (gucharmap) have been installed (wait until pre-configure); see #27394
git-svn-id: https://svn.macports.org/repository/macports/trunk@73674 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/editors/bluefish/Portfile
+++ b/dports/editors/bluefish/Portfile
@@ -41,8 +41,10 @@ configure.args          --mandir=${prefix}/share/man \
                         --without-freedesktop_org-menu \
                         --without-freedesktop_org-mime
 
-configure.env-append    CHARMAP_PLUGIN_CFLAGS="[exec ${prefix}/bin/pkg-config --cflags gucharmap-2]" \
-                        CHARMAP_PLUGIN_LIBS="[exec ${prefix}/bin/pkg-config --libs gucharmap-2]"
+pre-configure {
+    configure.env-append    CHARMAP_PLUGIN_CFLAGS="[exec ${prefix}/bin/pkg-config --cflags gucharmap-2]" \
+                            CHARMAP_PLUGIN_LIBS="[exec ${prefix}/bin/pkg-config --libs gucharmap-2]"
+}
 
 destroot.destdir        DESTDIR=${destroot}
 
