oorexx: update homepage, simplify master_sites
git-svn-id: https://svn.macports.org/repository/macports/trunk@73675 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/lang/oorexx/Portfile
+++ b/dports/lang/oorexx/Portfile
@@ -16,8 +16,8 @@ long_description    ooRexx is an object orientated extension to			\
 		    readable, but powerful scripting and embedded macro		\
 		    language.
 
-homepage	    http://oorexx.sourceforge.net/
-master_sites	    sourceforge:oorexx
+homepage	    http://www.oorexx.org/
+master_sites	    sourceforge
 dist_subdir         ${name}/${version}_1
 distname	    ooRexx-${version}.source
 worksrcdir	    ooRexx-${version}
