Follow up to the fixes in #20748 and r73585, bump the revision to force a rebuild so autoconf finds a new m4 binary and doesn't expect m4 at ${prefix}/bin/m4 if m4 was installed with +with_default_names when autoconf was compiled.
git-svn-id: https://svn.macports.org/repository/macports/trunk@73682 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/autoconf/Portfile
+++ b/dports/devel/autoconf/Portfile
@@ -5,6 +5,7 @@ PortSystem       1.0
 name             autoconf
 epoch            1
 version          2.68
+revision         1
 categories       devel
 maintainers      ram openmaintainer
 platforms        darwin
