oorexx: since the developers have closed the bug report without fixing the problem, and clearly cannot be bothered to understand that requiring the user to set DYLD_LIBRARY_PATH is not an acceptable circumstance, we will fix the problem for them
git-svn-id: https://svn.macports.org/repository/macports/trunk@73683 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/lang/oorexx/Portfile
+++ b/dports/lang/oorexx/Portfile
@@ -7,7 +7,7 @@ PortSystem	    1.0
 name		    oorexx
 conflicts		rexx
 version		    4.0.1
-revision	    1
+revision	    2
 categories	    lang
 platforms	    darwin
 maintainers	    openmaintainer krischik
@@ -28,14 +28,8 @@ checksums           md5     12728847478a5219efc988c69f6f12c8 \
                     sha1    ce22a3caf3f69ae753cccc2904289ee65cd47934 \
                     rmd160  ffe481d70f76f8c895736f0893c90036556b60fa
 
-post-activate {
-    ui_msg "#########################################################################################"
-    ui_msg "# You need to set:                                                                      #"
-    ui_msg "#                                                                                       #"
-    ui_msg "# export DYLD_LIBRARY_PATH=${prefix}/lib/ooRexx                                         #"
-    ui_msg "#                                                                                       #"
-    ui_msg "# A bug report has been filed:                                                          #"
-    ui_msg "# https://sourceforge.net/tracker/?func=detail&aid=2997646&group_id=119701&atid=684731  #"
-    ui_msg "#########################################################################################"
-}
+patchfiles          patch-common-platform-unix-SysLibrary.cpp.diff
 
+post-patch {
+    reinplace "s|@PREFIX@|${prefix}|g" ${worksrcpath}/common/platform/unix/SysLibrary.cpp
+}
