gmt: updated for 4.5.5
git-svn-id: https://svn.macports.org/repository/macports/trunk@73685 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/science/gmt/Portfile
+++ b/dports/science/gmt/Portfile
@@ -4,7 +4,7 @@
 PortSystem                  1.0
 
 name                        gmt
-version                     4.5.3
+version                     4.5.5
 categories                  science
 maintainers                 takeshi
 license                     GPLv2
@@ -33,17 +33,17 @@ set gmtsuppl                GMT${version}_suppl.tar.bz2
 set gshhslow                GSHHS${gshhsversion}_coast.tar.bz2
 distfiles                   ${gmtsrc} ${gmtshare} ${gmtsuppl} ${gshhslow}
 checksums           ${gmtsrc} \
-                    md5     ad069cfcc8216fdef69e0cb94536c2a6 \
-                    sha1    b801316b08339d572905487cdb0d66b8236b7ecf \
-                    rmd160  43a015ba87817f7540d3fb34c2cd676d7bfc5ff5 \
+                    md5	    051554f98bff57365eebab2d227e3285 \
+                    sha1    39174fd1041729df8f9022fc2671c4dac1965338 \
+                    rmd160  f48c96266c22b51eab3a7f80737b12212ad171bb \
                     ${gmtshare} \
-                    md5     378ea1b0e46b09455722df81c4c191ab \
-                    sha1    a77559af20edea3a79f7a636671539e3040a5aea \
-                    rmd160  a664bee612593cfe0488348fd589a69574909756 \
+                    md5     55b9142fb8ad3e17a49542f42b36d923 \
+                    sha1    4eb02168408f8ca30c5f26f14d13774c700bb525 \
+                    rmd160  ef85e85f274af008299827444890c6631915049c \
                     ${gmtsuppl} \
-                    md5     7d4bcb2ac56ee558cae8446363a74e64 \
-                    sha1    c9feaa2f63052ec3ccbf125f5439e8f315d72f37 \
-                    rmd160  dc5b1122c8725017af3aba154330a6094d46ccd5 \
+                    md5     38e01e420876bfe3cafe60b207c91de6 \
+                    sha1    494d77d519462321ed5ecdd271c8ab80786d3cf9 \
+                    rmd160  10bd6477775875cb9a17ff70d9a9c6b8ced667e4 \
                     ${gshhslow} \
                     md5     1f84a99effe96e12fb60f31fa3cf35bb \
                     sha1    507dee527314e003039722e389052d2705f849d9 \
@@ -106,24 +106,24 @@ variant doc description {installs documentation, examples and tutorial} {
     set gmtdoc GMT${version}_doc.tar.bz2
     distfiles-append        ${gmtdoc}
     checksums-append        ${gmtdoc} \
-                    md5     a2f0243bbbea4c6e1472a1d92a2c6d7c \
-                    sha1    b573b26a0f6b46758ba5e84ad7c6274f91c0457c \
-                    rmd160  c14aa0092060510b597bff0c277b8c12cdb210bd
+                    md5     0a99b8f820689d872b18cf689efad9b9 \
+                    sha1    8f8fae5057def5b35ca87ace507afca78e112609 \
+                    rmd160  b4884586cae06703d60e32c1d50c7ae815be0591
 }
 
 variant octave description {compiles Octave interface} {
-    depends_lib-append port:octave
-    configure.args-append --enable-octave
-    configure.args-delete --disable-mex
+    depends_lib-append      bin:mkoctfile:octave
+    configure.args-append   --enable-octave
+    configure.args-delete   --disable-mex
 }
 
 variant triangle description {use J. Shewchuk's fast, non-GPL triangulation routine} {
     set gmttri GMT${version}_triangle.tar.bz2
     distfiles-append        ${gmttri}
     checksums-append        ${gmttri} \
-                    md5     5bccc9d473fc2a659cb21d3aafd8b228 \
-                    sha1    451d8e2d09673dd72dfb249ca3630c5989256475 \
-                    rmd160  7359ece268bdd3e48214bda9d840659980e4c1ea
+                    md5     36a4788e72aa3dc557a256bca14f79a0 \
+                    sha1    6fe65cd335b94f45bbdbfa6369846d61b3f727a8 \
+                    rmd160  0da9e187972ea06df4ffd6a8281e4ff862faf824
 
     configure.args-append   --enable-triangle
 }
