kmymoney4-devel: previously applied bugfix has been considered in SVN by now
git-svn-id: https://svn.macports.org/repository/macports/trunk@73686 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/kde/kmymoney4-devel/Portfile
+++ b/dports/kde/kmymoney4-devel/Portfile
@@ -8,16 +8,15 @@ PortGroup           kde4    1.1
 
 fetch.type          svn
 svn.url             svn://anonsvn.kde.org/home/kde/trunk/extragear/office/kmymoney
-svn.revision        1199066
+svn.revision        1199323
 
 name                kmymoney4-devel
 version             4.5-${svn.revision}
-revision            1
 
 categories          kde finance
 maintainers         mk pixilla.com:brad openmaintainer
 
-description         kmymoney version 4 (THIS IS STILL AN EXPERIMENTAL PORT.)
+description         kmymoney version 4 following SVN HEAD as close as possible (THIS IS STILL AN EXPERIMENTAL PORT.)
 long_description    KMyMoney is the personal finance manager for KDE. (THIS IS STILL AN EXPERIMENTAL PORT.)
 platforms           darwin
 license             GPL2
@@ -50,8 +49,7 @@ So far known problems are:                     \n \
 "
 }
 
-patchfiles        patch-kMyMoneyDateInput_eventFilter.diff \
-                  patch_for_crash_due_to_GWEN_StringListEntry_Next.diff
+patchfiles        patch-kMyMoneyDateInput_eventFilter.diff
 
 patch.dir         ${workpath}/${distname}
 patch.pre_args    -p1
