smartmontools: allow working with BSD sed. (#27330)
git-svn-id: https://svn.macports.org/repository/macports/trunk@73687 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/sysutils/smartmontools/Portfile
+++ b/dports/sysutils/smartmontools/Portfile
@@ -4,6 +4,7 @@ PortSystem 1.0
 
 name            smartmontools
 version         5.40
+revision        1
 categories      sysutils
 maintainers     toby
 description     SMART hard drive monitoring
@@ -17,6 +18,7 @@ homepage        http://smartmontools.sourceforge.net/
 platforms       darwin
 license         GPLv2
 master_sites    sourceforge
+patchfiles      patch-update-smart-drivedb.in.diff
 checksums       md5     0f0be0239914ad87830a4fff594bda5b \
                 sha1    08a86a939a2e2cd85d2c88c09188d494f06ce050 \
                 rmd160  ff2ebfd130182ba721248ebfebd9d4d5cc325ff4
