smartmontools: use startupitem options
git-svn-id: https://svn.macports.org/repository/macports/trunk@73688 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/sysutils/smartmontools/Portfile
+++ b/dports/sysutils/smartmontools/Portfile
@@ -4,7 +4,7 @@ PortSystem 1.0
 
 name            smartmontools
 version         5.40
-revision        1
+revision        2
 categories      sysutils
 maintainers     toby
 description     SMART hard drive monitoring
@@ -29,21 +29,11 @@ configure.args  --mandir=${prefix}/share/man \
                 --enable-sample \
                 --with-libcap-ng=no
 
-platform darwin {
-    destroot.violate_mtree  yes
-    post-destroot {
-        file delete -force ${destroot}${prefix}/etc/rc.d
-
-        set launchd_path ${destroot}/Library/LaunchDaemons
-        set launchd_plist net.sourceforge.smartmontools.smartd.plist
-
-        xinstall -d ${launchd_path}
-        xinstall -m 0644 ${filespath}/${launchd_plist} ${launchd_path}
-        reinplace s|__PREFIX__|${prefix}| ${launchd_path}/${launchd_plist}
-
-        if {${os.major} < 9} {
-            reinplace s|KeepAlive|OnDemand| ${launchd_path}/${launchd_plist}
-            reinplace s|true|false| ${launchd_path}/${launchd_plist}
-        }
-    }
+post-destroot {
+    delete ${destroot}${prefix}/etc/rc.d
 }
+
+startupitem.create      yes
+startupitem.name        smartd
+startupitem.executable  ${prefix}/sbin/smartd -p ${prefix}/var/run/smartd.pid
+startupitem.pidfile     auto ${prefix}/var/run/smartd.pid
