smartmontools: add missing 'destroot.keepdirs'
git-svn-id: https://svn.macports.org/repository/macports/trunk@73689 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/sysutils/smartmontools/Portfile
+++ b/dports/sysutils/smartmontools/Portfile
@@ -4,7 +4,7 @@ PortSystem 1.0
 
 name            smartmontools
 version         5.40
-revision        2
+revision        3
 categories      sysutils
 maintainers     toby
 description     SMART hard drive monitoring
@@ -29,6 +29,7 @@ configure.args  --mandir=${prefix}/share/man \
                 --enable-sample \
                 --with-libcap-ng=no
 
+destroot.keepdirs   ${destroot}${prefix}/var/run
 post-destroot {
     delete ${destroot}${prefix}/etc/rc.d
 }
