taglib-sharp: fix homepage, master_sites, livecheck; see #27407
git-svn-id: https://svn.macports.org/repository/macports/trunk@73690 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/audio/taglib-sharp/Portfile
+++ b/dports/audio/taglib-sharp/Portfile
@@ -13,8 +13,9 @@ description         C# implementation of TagLib.
 long_description    ${description} TagLib is a library for reading and \
                     editing the meta-data of several popular audio formats.
 
-homepage            http://www.taglib-sharp.com/
-master_sites        ${homepage}Download/
+homepage            http://banshee.fm/
+master_sites        http://download.banshee.fm/taglib-sharp/${version}
+
 checksums           md5 aa2c344760c8f4d878957fd4600155a5 \
                     sha1 4f88ca8506d0d82fda029ed3c7b317b990b478db \
                     rmd160 fe568a1a5e55cea36891009f22cd31846a743ab8
@@ -24,5 +25,5 @@ depends_lib         port:mono
 configure.args      --disable-docs
 
 livecheck.type      regex
-livecheck.url       ${master_sites}
-livecheck.regex     "${name}-(\\d+(?:\\.\\d+)*)"
+livecheck.url       http://download.banshee.fm/taglib-sharp/
+livecheck.regex     {"(\d+(?:\.\d+)*)/"}
