taglib-sharp: update to 2.0.3.7, add license line, also install documentation files, indicate that this is noarch... (at least, it contains no code that runs on Mac OS X)
git-svn-id: https://svn.macports.org/repository/macports/trunk@73692 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/audio/taglib-sharp/Portfile
+++ b/dports/audio/taglib-sharp/Portfile
@@ -3,12 +3,13 @@
 PortSystem          1.0
 
 name                taglib-sharp
-version             2.0.3.0
+version             2.0.3.7
 categories          audio
 platforms           darwin
-# mono is currently 32-bit only
-supported_archs     i386 ppc
 maintainers         nomaintainer
+license             LGPL-2.1
+supported_archs     noarch
+
 description         C# implementation of TagLib.
 long_description    ${description} TagLib is a library for reading and \
                     editing the meta-data of several popular audio formats.
@@ -16,13 +17,24 @@ long_description    ${description} TagLib is a library for reading and \
 homepage            http://banshee.fm/
 master_sites        http://download.banshee.fm/taglib-sharp/${version}
 
-checksums           md5 aa2c344760c8f4d878957fd4600155a5 \
-                    sha1 4f88ca8506d0d82fda029ed3c7b317b990b478db \
-                    rmd160 fe568a1a5e55cea36891009f22cd31846a743ab8
+checksums           sha1    97beb1473d2fc730fc0289fe54d94ff64070fa82 \
+                    rmd160  25cd15206d2090602131341ae0103af3052a2f94
 
 depends_lib         port:mono
 
 configure.args      --disable-docs
+
+post-destroot {
+    set docdir ${destroot}${prefix}/share/doc/${name}
+    xinstall -d ${docdir}
+    xinstall -m 644 -W ${worksrcpath} \
+        AUTHORS \
+        COPYING \
+        ChangeLog \
+        NEWS \
+        README \
+        ${docdir}
+}
 
 livecheck.type      regex
 livecheck.url       http://download.banshee.fm/taglib-sharp/
