MyPaint: add pkgconfig build dependency, fix build error with non-default MacPorts prefix (see #27367)
git-svn-id: https://svn.macports.org/repository/macports/trunk@73693 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/graphics/MyPaint/Portfile
+++ b/dports/graphics/MyPaint/Portfile
@@ -28,7 +28,8 @@ master_sites                http://download.gna.org/mypaint/
 checksums                   sha1    6c733a1bc87e237be18389aefb26a034b1229d24 \
                             rmd160  07c83e5012400b9931a03bb750bf3f97da73bbd3
 
-depends_build               port:scons \
+depends_build               port:pkgconfig \
+                            port:scons \
                             port:swig-python
 
 depends_lib                 port:protobuf-python26 \
@@ -44,6 +45,7 @@ use_configure               no
 
 build.cmd                   scons
 build.target
+build.args                  prefix=${prefix}
 
 destroot.destdir            prefix=${destroot}${prefix}
 
