nasm: update to 2.09.03 and add new maintainer
git-svn-id: https://svn.macports.org/repository/macports/trunk@73694 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/lang/nasm/Portfile
+++ b/dports/lang/nasm/Portfile
@@ -3,10 +3,11 @@
 PortSystem 1.0
 
 name		nasm
-version		2.08.01
+version		2.09.03
 categories	lang
 platforms	darwin
-maintainers	nomaintainer
+license		BSD
+maintainers	mfeiri openmaintainer
 description	NASM, the Netwide Assembler, is an 80x86 assembler
 long_description \
 	The Netwide Assembler, NASM, is an 80x86 and x86-64 assembler designed \
@@ -23,9 +24,9 @@ master_sites	http://www.nasm.us/pub/nasm/releasebuilds/${version}
 use_bzip2	yes
 set nasm_src	[suffix ${name}-${version}]
 distfiles	${nasm_src}
-checksums       md5     1e3ebc1289c2be5963571c0937b7a211 \
-                sha1    4684e0bda835fe903a8f1b727710afb46214de07 \
-                rmd160  443cb03854ba47dcd1b69ab0e31691d783f33132
+checksums       md5     cbab4ecd50ed6701a9d85ffa08858f15 \
+                sha1    ffc0008f1eee29f18945976f2a7d7927482f9369 \
+                rmd160  28dcc15be3f0484bdcb2a9568479133c35b2dbdf
 
 destroot.target		install install_rdf
 destroot.destdir	prefix=${destroot}${prefix}
