--- a/dports/graphics/gdk-pixbuf/Portfile
+++ b/dports/graphics/gdk-pixbuf/Portfile
@@ -6,7 +6,7 @@ PortSystem 1.0
 name		gdk-pixbuf
 version		0.22.0
 set branch      [join [lrange [split ${version} .] 0 1] .]
-revision	3
+revision	4
 categories	graphics
 maintainers	nomaintainer
 description	generic image handling library for Gtk+ programs
@@ -28,7 +28,8 @@ depends_build	port:tiff port:jpeg port:libpng \
 universal_variant no
 
 patchfiles	patch-Makefile.in.diff patch-configure.diff \
-		patch-ltmain.sh.diff patch-gdk-pixbuf-Makefile.in.diff
+		patch-ltmain.sh.diff patch-gdk-pixbuf-Makefile.in.diff \
+		patch-underquoting.diff
 
 configure.cflags-append "-L${prefix}/lib"
 configure.env		LIBS="-L${prefix}/lib"
