conglomerate: fix livecheck.
git-svn-id: https://svn.macports.org/repository/macports/trunk@73699 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/gnome/conglomerate/Portfile
+++ b/dports/gnome/conglomerate/Portfile
@@ -38,4 +38,5 @@ post-activate    {
         gconftool-2 --makefile-install-rule ${prefix}/etc/gconf/schemas/*.schemas"
 }
 
-livecheck.regex "(?i)<title>${name} .* (\\d+(?:\\.\\d+)*) released.*</title>"
+livecheck.url   http://sourceforge.net/projects/${name}/files/
+livecheck.regex "${name}-(\\d+(?:\\.\\d+)*)${extract.suffix}"
