pessulus: update to version 2.30.4, not universal.
git-svn-id: https://svn.macports.org/repository/macports/trunk@73700 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/gnome/pessulus/Portfile
+++ b/dports/gnome/pessulus/Portfile
@@ -4,7 +4,7 @@
 PortSystem	1.0
 
 name		pessulus
-version		2.30.3
+version		2.30.4
 set branch      [join [lrange [split ${version} .] 0 1] .]
 categories	gnome python
 platforms	darwin
@@ -18,9 +18,9 @@ long_description	\
 homepage	http://www.gnome.org/~vuntz/pessulus/
 master_sites	gnome:sources/${name}/${branch}/
 
-checksums       md5     8e9bc7f3dabbdba29f3218aeb7cc2233 \
-                sha1    f4dc60323469ef6caeee7da88a90740ac0272b10 \
-                rmd160  08ae9e7ed05913b69943676350997289c2db8cbf
+checksums       md5     3a66250af602b8baf378c9cf28b5b8ce \
+                sha1    0b8cd8e1e7ca65cfb3008f44c5cb3c126c010ea4 \
+                rmd160  c0040e873455d43afc544364ca172d6bb70e73b0
 
 use_bzip2	yes
 
@@ -42,6 +42,12 @@ configure.pkg_config_path ${python_prefix}/lib/pkgconfig
 post-destroot {
     file rename ${destroot}${prefix}/bin/pessulus.py ${destroot}${prefix}/bin/pessulus
 }
+
+#
+# port gnome-python-desktop is not universal
+#
+
+universal_variant no
 
 post-activate {
     system "${prefix}/bin/gtk-update-icon-cache -f -t ${prefix}/share/icons/hicolor"
