pessulus: update homepage.
git-svn-id: https://svn.macports.org/repository/macports/trunk@73701 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/gnome/pessulus/Portfile
+++ b/dports/gnome/pessulus/Portfile
@@ -15,7 +15,7 @@ long_description	\
 	The users can not change these settings. Use of pessulus can be \
 	useful on computers that are open to use by everyone, e.g. in an \
 	internet cafe.
-homepage	http://www.gnome.org/~vuntz/pessulus/
+homepage	http://library.gnome.org/admin/system-admin-guide/stable/lockdown.html
 master_sites	gnome:sources/${name}/${branch}/
 
 checksums       md5     3a66250af602b8baf378c9cf28b5b8ce \
