p5-mail-sendmail: drop maintainership
git-svn-id: https://svn.macports.org/repository/macports/trunk@73702 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/perl/p5-mail-sendmail/Portfile
+++ b/dports/perl/p5-mail-sendmail/Portfile
@@ -8,7 +8,7 @@ categories	perl mail
 platforms       darwin
 perl5.setup	Mail-Sendmail 0.79
 license	DFSG-Approved
-maintainers	jmr openmaintainer
+maintainers	nomaintainer
 description	Simple platform independent e-mail from perl scripts.
 long_description Simple platform independent e-mail from your perl \
 		script. Only requires Perl 5 and a network connection. \
