--- a/dports/x11/x3270/Portfile
+++ b/dports/x11/x3270/Portfile
@@ -3,7 +3,8 @@
 PortSystem			1.0
 
 name				x3270
-version				3.3.8
+version				3.3.11ga6
+set branch			[join [lrange [split ${version} .] 0 1] .]
 categories			x11
 maintainers			gmail.com:mark.church
 platforms			darwin
@@ -32,36 +33,38 @@ long_description		x3270 is an IBM 3270 terminal emulator for the X \
 				It does not yet support graphics.
 homepage			http://x3270.bgp.nu/index.html
 master_sites			sourceforge
-master_sites.mirror_subdir	${name}
-distfiles			${name}-${version}.tgz
-checksums			md5 d707ca1ccad84672981c95ea2c125b62 \
-				sha1  076f9efdc90552b01d200d64c739a1d6e8ffb2a9 \
-				rmd160 c72f39b57b30951ec447601fbc496447f615e685
-worksrcdir			x3270-3.3
 
-configure.args			--bindir=${prefix}/bin \
-				--without-pr3287 \
-				--disable-dbcs \
+distname			suite3270-${version}-src
+worksrcdir			${name}-${branch}
+extract.post_args-append        ${worksrcdir}
+extract.suffix			.tgz
+
+checksums			sha1    c72c4f72313659863e8718ffdcd43b03aa77b8e5 \
+				rmd160  1f5214a2e18f2cbea7aa7a1d81f943f07e8f0dce
+
+depends_lib			port:libiconv \
+				port:openssl \
+				port:xorg-libXaw
+
+patchfiles			patch-Makefile.in.diff
+
+configure.args			--disable-dbcs \
 				--with-fontdir=${prefix}/lib/x3270/fonts \
-				--mandir=${prefix}/share/man
+				--with-iconv \
+				--with-ssl=${prefix} \
+				--with-x \
+				--without-xmkmf
 
-destroot.target         install.byprefix
+configure.universal_args-delete	--disable-dependency-tracking
 
-pre-build {
-	reinplace "s|\$(DESTDIR)\$(BINDIR)|\$(DESTDIR)${prefix}/bin|g" \
-		${worksrcpath}/Makefile
-}
-
-post-activate {
-ui_msg "\n
-If you wish to use a font other than \"fixed\", activate x3270 fonts by
+notes "
+If you wish to use a font other than \"fixed\", activate x3270 fonts by\
 executing this command:
 
-	/usr/X11R6/bin/xset fp+ ${prefix}/lib/x3270/fonts/
+	${prefix}/bin/xset fp+ ${prefix}/lib/x3270/fonts/
 
-To make the change persist after restarting X11, insert the same command
+To make the change persist after restarting X11, insert the same command\
 into your ~/.xinitrc file or the X11 system default file:
 
-	/etc/X11/xinit/xinitrc
-\n"
-}
+	${prefix}/lib/X11/xinit/xinitrc
+"
