pound: update to 2.5 and fix build failure with openssl 1.0.0; see #27325 (maintainer timeout)
git-svn-id: https://svn.macports.org/repository/macports/trunk@73704 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/www/pound/Portfile
+++ b/dports/www/pound/Portfile
@@ -3,8 +3,7 @@
 PortSystem        1.0
 
 name              pound
-version           2.4.3
-revision        1
+version           2.5
 categories        www
 platforms         darwin
 maintainers       gmail.com:rcavanaugh
@@ -20,15 +19,17 @@ homepage          http://www.apsis.ch/pound/
 distname          Pound-${version}
 extract.suffix    .tgz
 master_sites      ${homepage}
-checksums         md5 2de4c2ac1023b420b74a1bc08fb93b8a \
-                  sha1 1d86e134bf307c9e2f10f647a73925339ba96575 \
-                  rmd160 a59c5fda7ce12513a894c4cbe59708f2fb73caa3
+
+checksums         sha1    0bc8c45b9afb64fb8810b44213345c2a67ce8a8c \
+                  rmd160  6f8d55eff11b25b0ac0dab66aac90af5380e2753
 
 # TODO use tcmalloc and/or hoard
 depends_lib       port:openssl port:pcre
-configure.args    --mandir=\\\$\\{prefix\\}/share/man \
-                  --infodir=\\\$\\{prefix\\}/share/info \
-                  --with-ssl=${prefix}/include/openssl
+
+patchfiles        pound-2.5-openssl.patch
+patch.pre_args    -p1
+
+configure.args    --with-ssl=${prefix}
 
 set pound_config_name   pound.cfg
 set pound_config        ${prefix}/etc/${pound_config_name}
