--- a/dports/databases/db47/Portfile
+++ b/dports/databases/db47/Portfile
@@ -89,6 +89,22 @@ variant tcl description {build Tcl API} {
     configure.args-append  --enable-tcl --with-tcl=${prefix}/lib
 }
 
+platform macosx {
+    pre-configure {
+        if {![file exists "/System/Library/Frameworks/JavaVM.framework/Headers/jni.h"] && ![variant_isset no_java]} {
+            ui_error "${name} requires the Java for Mac OS X development headers."
+            if {${os.major} == 10} {
+                ui_error "Download the Java Developer Package from: <https://connect.apple.com/cgi-bin/WebObjects/MemberSite.woa/wa/getSoftware?bundleID=20719>"
+            } elseif {${os.major} == 9} {
+                ui_error "Download the Java Developer Package from: <https://connect.apple.com/cgi-bin/WebObjects/MemberSite.woa/wa/getSoftware?bundleID=20720>"
+            } else {
+                ui_error "Make sure your Xcode installation is complete."
+            }
+            return -code error "missing Java headers"
+        }
+    }
+}
+
 if { [variant_isset universal] } {
     if { ${os.arch}=="i386" } {
         if { ${os.major} >= 10 } {
