inkscape: add missing build dependencies, update patch file.
git-svn-id: https://svn.macports.org/repository/macports/trunk@73707 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/graphics/inkscape/Portfile
+++ b/dports/graphics/inkscape/Portfile
@@ -32,6 +32,10 @@ checksums       md5     fd8b17a3f06668603807176a77167bb9 \
                 sha1    a2ab9b34937cc4f2b482c9b3720d8fd4dc7b12e8 \
                 rmd160  fe10b77f10e922a911e7117922d7553ed11d00dd
 
+depends_build   port:pkgconfig \
+                port:intltool \
+                path:bin/perl:perl5
+
 depends_lib     port:boehmgc \
                 port:gsl \
                 port:gtkmm \
