--- a/dports/gnustep/gnustep-make/Portfile
+++ b/dports/gnustep/gnustep-make/Portfile
@@ -25,10 +25,15 @@ checksums           md5     3d2d06d3313432fc82e6b09c49fb7f8a \
 
 destroot.violate_mtree yes
 
-depends_lib         port:gcc42
-configure.compiler  macports-gcc-4.2
+platform darwin 8 {
+    depends_lib         port:apple-gcc42
+    configure.compiler  apple-gcc-4.2
+}
+platform darwin 9 {
+    configure.compiler  gcc-4.2
+}
 
-configure.args      CC=gcc-mp-4.2 \
+configure.args      CC=${configure.cc} \
                     --with-library-combo=gnu-gnu-gnu \
                     --with-objc-lib-flag=-lobjc-gnu
 
