--- a/dports/gnustep/gnustep-make/Portfile
+++ b/dports/gnustep/gnustep-make/Portfile
@@ -62,8 +62,7 @@ variant gnustep_layout conflicts fhs_layout {
 
     destroot.keepdirs       ${destroot}${prefix}/GNUstep/Local
 
-    post-install {
-        ui_msg "
+        notes "\
 ##########################################################
 To have a fully working GNUstep make system, please add
 '. ${prefix}/GNUstep/System/Library/Makefiles/GNUstep.sh'
@@ -72,8 +71,7 @@ to your shell login (in ~/.profile)
 You may also want to set up your MANPATH :
 export MANPATH=\$GNUSTEP_LOCAL_ROOT/Library/Documentation/man:\$GNUSTEP_SYSTEM_ROOT/Library/Documentation/man:${prefix}/share/man:/usr/share/man
 ##########################################################
-        "
-    }
+"
 }
 
 platform darwin {
