--- a/dports/gnustep/gnustep-make/Portfile
+++ b/dports/gnustep/gnustep-make/Portfile
@@ -3,7 +3,7 @@
 PortSystem 1.0
 
 name            gnustep-make
-version         2.2.0
+version         2.4.0
 categories      gnustep devel cross
 platforms       darwin
 maintainers     nomaintainer
@@ -19,9 +19,9 @@ long_description \
     It also allows the user to easily create cross-compiled binaries.
 
 master_sites        gnustep:core
-checksums           md5     3d2d06d3313432fc82e6b09c49fb7f8a \
-                    sha1    35654bab0a6576084e486e062e7e42603026509d \
-                    rmd160  6c020432fbce9f018b01d85935e5235b874fd88e
+checksums           md5     bc2138e6256665e55b00fb0ffac766f1 \
+                    sha1    afda14186394c65b0871dba93f92dc965b2fc724 \
+                    rmd160  6f1dd81039c9935e41eb7988923c3b3c6507e383
 
 destroot.violate_mtree yes
 
@@ -44,7 +44,7 @@ if {![variant_isset fhs_layout]} {
 }
 
 # for the curious only, not really supported by MacPorts
-variant fhs_layout conflicts gnustep_layout {
+variant fhs_layout conflicts gnustep_layout description {Use FHS layout (unsupported)} {
     configure.args-append   --with-layout=fhs \
                             --with-config-file=${prefix}/etc/GNUstep.conf
     post-patch {
@@ -55,7 +55,7 @@ variant fhs_layout conflicts gnustep_layout {
     }
 }
 
-variant gnustep_layout conflicts fhs_layout {
+variant gnustep_layout conflicts fhs_layout description {Use standard GNUstep layout} {
     configure.pre_args      --prefix=${prefix}/GNUstep
     configure.args-append   \
         --with-config-file=${prefix}/GNUstep/System/Library/GNUstep.conf
