Force /bin/echo so as to avoid inadvertant dependency on old coreutils +with_default_names (see #27430)
git-svn-id: https://svn.macports.org/repository/macports/trunk@73724 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/apr/Portfile
+++ b/dports/devel/apr/Portfile
@@ -27,7 +27,7 @@ patchfiles	patch-configure.diff
 
 use_parallel_build	yes
 configure.ccache	no
-configure.env   ac_cv_prog_AWK=awk ac_cv_path_SED=sed
+configure.env   ac_cv_prog_AWK=awk ac_cv_path_SED=sed lt_ECHO=/bin/echo
 configure.args	--with-installbuilddir=${prefix}/share/apr-1/build \
 		--enable-nonportable-atomics \
 		ac_cv_func_setpgrp_void=no
