galeon: fix livecheck.
git-svn-id: https://svn.macports.org/repository/macports/trunk@73727 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/gnome/galeon/Portfile
+++ b/dports/gnome/galeon/Portfile
@@ -71,4 +71,5 @@ post-activate {
          GCONF_CONFIG_SOURCE=`${prefix}/bin/gconftool-2 --get-default-source` ${prefix}/bin/gconftool-2 --makefile-install-rule $schemastring"
 }
 
-livecheck.regex  "<title>${name} .* (\\d+(?:\\.\\d+)*) released.*</title>"
+livecheck.url           http://sourceforge.net/projects/${name}/files/
+livecheck.regex         "${name}-(\\d+(?:\\.\\d+)*)${extract.suffix}"
