--- a/dports/gnome/gnomesu/Portfile
+++ b/dports/gnome/gnomesu/Portfile
@@ -1,3 +1,4 @@
+# -*- coding: utf-8; mode: tcl; tab-width: 4; indent-tabs-mode: nil; c-basic-offset: 4 -*- vim:fenc=utf-8:ft=tcl:et:sw=4:ts=4:sts=4
 # $Id$
 
 PortSystem 1.0
@@ -22,4 +23,5 @@ configure.args	--mandir=${prefix}/share/man
 configure.cppflags-append "-L${prefix}/lib"
 configure.cflags-append -flat_namespace -undefined suppress
 
-livecheck.regex <title>${name} (.*) released.*</title>
+livecheck.url   http://sourceforge.net/projects/xsu/files/
+livecheck.regex "${name}-(\\d+(?:\\.\\d+)*)${extract.suffix}"
