--- a/dports/gnome/gnotify/Portfile
+++ b/dports/gnome/gnotify/Portfile
@@ -1,3 +1,4 @@
+# -*- coding: utf-8; mode: tcl; tab-width: 4; indent-tabs-mode: nil; c-basic-offset: 4 -*- vim:fenc=utf-8:ft=tcl:et:sw=4:ts=4:sts=4
 # $Id$
 
 PortSystem 1.0
@@ -24,4 +25,5 @@ pre-configure	{
 		file copy -force ${filespath}/missing ${worksrcpath}
 		}
 
-livecheck.regex "<title>gnotify .* (\\d+(?:\\.\\d+)*) released.*</title>"
+livecheck.url   http://sourceforge.net/projects/${name}/files/
+livecheck.regex "${name}-(\\d+(?:\\.\\d+)*)${extract.suffix}"
