gnotime: fix livecheck, add mode line.
git-svn-id: https://svn.macports.org/repository/macports/trunk@73730 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/gnome/gnotime/Portfile
+++ b/dports/gnome/gnotime/Portfile
@@ -1,3 +1,4 @@
+# -*- coding: utf-8; mode: tcl; tab-width: 4; indent-tabs-mode: nil; c-basic-offset: 4 -*- vim:fenc=utf-8:ft=tcl:et:sw=4:ts=4:sts=4
 # $Id$
 
 PortSystem 1.0
@@ -21,4 +22,5 @@ depends_lib	bin:guile:guile lib:libgtkhtml-2:libgtkhtml
 configure.cppflags-append "-L${prefix}/lib"
 configure.cflags-append -flat_namespace -undefined suppress
 
-livecheck.regex "<title>${name} ${name}-(\\d+(?:\\.\\d+)*) released.*</title>"
+livecheck.url   http://sourceforge.net/projects/gttr/files/
+livecheck.regex "${name}-(\\d+(?:\\.\\d+)*)${extract.suffix}"
