sdcc: Enable options disabled by the 3.0 release (that were enabled by default in 2.9 and prior).
git-svn-id: https://svn.macports.org/repository/macports/trunk@73733 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/lang/sdcc/Portfile
+++ b/dports/lang/sdcc/Portfile
@@ -30,6 +30,9 @@ worksrcdir          ${name}
 
 # Setting CPP explicitly is bad, because 'cpp' and 'gcc -E' are not the same.
 configure.cpp       {}
+configure.args      --enable-avr-port \
+                    --enable-xa51-port \
+                    --enable-docs
 
 build.type          gnu
 
