murmur:  * drop g15 (Logitech LCD), #23992  * disable update checks
git-svn-id: https://svn.macports.org/repository/macports/trunk@73734 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/net/murmur/Portfile
+++ b/dports/net/murmur/Portfile
@@ -40,7 +40,7 @@ depends_build-append \
 configure.cmd       ${qt_qmake_cmd}
 configure.pre_args  CONFIG-=app_bundle CONFIG+=\"
 configure.post_args \"
-configure.args      release no-universal no-client no-ice
+configure.args      release no-universal no-client no-ice no-g15 no-update
 
 variant universal {
     configure.args-delete no-universal
