sdcc: building docs does not work; just install what is provided.
git-svn-id: https://svn.macports.org/repository/macports/trunk@73735 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/lang/sdcc/Portfile
+++ b/dports/lang/sdcc/Portfile
@@ -31,8 +31,7 @@ worksrcdir          ${name}
 # Setting CPP explicitly is bad, because 'cpp' and 'gcc -E' are not the same.
 configure.cpp       {}
 configure.args      --enable-avr-port \
-                    --enable-xa51-port \
-                    --enable-docs
+                    --enable-xa51-port
 
 build.type          gnu
 
